--- a/chapter4.qmd
+++ b/chapter4.qmd
@@ -5,13 +5,15 @@ format:
     page-layout: full
 ---
 
-This page will feature the edition/translation of the T portraits...
+Each of these columns features an edited transcription and English translation of the two portraits of Mary the Egyptian as they appear in each of the T manuscripts. Copy T-L is not included on this page due to lack of access to the original manuscript at the British Library. The two fragmentary copies of Version T (T-F^1^ and T-F^2^) do not offer any lines of either portrait, and so, they have also been excluded from this page.
+
+To read these passages in translation, hover over each column with your cursor.
 
 ::: {.column-page-outset}
 ::: {layout="[[20,20,20,20,20]]"}
 
 ::: {.portrait-column}
-## A
+## T-A
 <div class="text-container">
   <div class="default-text">
 .....<br>
@@ -323,7 +325,7 @@ Her life was entirely spiritual.<br>
 :::
 
 ::: {.portrait-column}
-## B
+## T-B
 <div class="text-container">
   <div class="default-text">
 .....<br>
@@ -603,7 +605,7 @@ Her life was spriitual.<br>
 :::
 
 ::: {.portrait-column}
-## C
+## T-C
 <div class="text-container">
   <div class="default-text">
 .....<br>
@@ -919,7 +921,7 @@ Her life is entirely spiritual.<br>
 :::
 
 ::: {.portrait-column}
-## D
+## T-D
 <div class="text-container">
   <div class="default-text">
 .....<br>
@@ -1227,7 +1229,7 @@ Her life was spiritual.<br>
 :::
 
 ::: {.portrait-column}
-## E
+## T-E
 <div class="text-container">
   <div class="default-text">
 .....<br>
