Corrected typo in T-B translation "spiritual"

--- a/chapter4.qmd
+++ b/chapter4.qmd
@@ -598,7 +598,7 @@ Never did she see a wild beast<br>
 nor any living creature.<br>
 Through the forest, she goes so secure.<br>
 In many places, she was sheltered.<br>
-Her life was spriitual.<br>
+Her life was spiritual.<br>
 .....<br>
   </div>
 </div>
