Corrected typo in T-C translation "for she was a gem..."

--- a/chapter4.qmd
+++ b/chapter4.qmd
@@ -769,7 +769,7 @@ as it is in the written source<br>
 I want to say a little about her appearance<br>
 before I go on.<br>
 At that time, there was no woman so beautiful<br>
-for she was gem above them all.<br>
+for she was a gem above them all.<br>
 Never countess nor queen<br>
 had on her head such beautiful hair.<br>
 She had round ears.<br>
