Corrected typo in v.579 of T-B "brulee"

--- a/chapter4.qmd
+++ b/chapter4.qmd
@@ -400,7 +400,7 @@ Se tenre car muat color.<br>
 qui ans eret blance cum florr<br>
 Color muat sa bele crine.<br>
 blance devint conme l'ermine<br>
-desoz la face eret bruleee.<br>
+desoz la face eret brulee.<br>
 del soloilh & de la jalee<br>
 La boche li ert atenevie.<br>
 & environ la cars norcie<br>
