Incorporated translation edits from Ogden's comments on Dissertation Introduction draft for vv. 683-684, 696, & 698 for copy T-A

--- a/chapter4.qmd
+++ b/chapter4.qmd
@@ -301,8 +301,8 @@ She does not bemoan her sins<br>
 as her body is so chastised.<br>
 On grass she lived and on roots<br>
 for seventeen years in the wilderness.<br>
-Then for thirty years, she never ate<br>
-but what the angel brought to her.<br>
+Then for thirty years, she ate nothing<br>
+unless an angel brought it to her.<br>
 In the first year, the devil<br>
 often used to tempt her,<br>
 making her remember all<br>
@@ -314,9 +314,9 @@ that she had forgotten all.<br>
 Never then in all her life<br>
 did she think more of folly.<br>
 Never in all the wood<br>
-did any wild beast come to her then<br>
+did any wild beast come to her thereafter<br>
 nor any other living creature.<br>
-Through the glen, she goes totally sure.<br>
+Through the forest, she goes completely safe.<br>
 In many places, she took shelter.<br>
 Her life was entirely spiritual.<br>
 .....<br>
