Corrected translation in T-E "Of her beauty, of her figure"

--- a/chapter4.qmd
+++ b/chapter4.qmd
@@ -1388,7 +1388,7 @@ Sa vie estoit esperital<br>
   </div>
   <div class="hover-text">
 .....<br>
-Of her beauty and of her figure<br>
+Of her beauty, of her figure<br>
 as it is in the written source<br>
 I want to say a little about her appearance<br>
 before I go too far.<br>
